# fvm-wrap-demo

./: Cargo.toml  package.json  polywrap.test.yaml  polywrap.yaml
apps/js/: package.json
apps/js/src/: index.ts
apps/py/: README.md  main.py  pyproject.toml
apps/rs/: Cargo.toml
apps/rs/src/: main.rs
src/: lib.rs  schema.graphql
